tests/snapshots/snapshots__budget_ini_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (983 words)

.eslintrc.js
     7→const localConfigs = readdir(__dirname)
     8→  .filter((file) => file.startsWith('.eslintrc.local.'))
     9→  .map((file) => `./${file}`)
CHANGELOG.md
     3→## [6.0.0](https://github.com/npm/ini/compare/v5.0.0...v6.0.0) (2025-10-22) …
     4→### ⚠️ BREAKING CHANGES …
    12→### ⚠️ BREAKING CHANGES …
    24→### Bug Fixes …
    36→### Bug Fixes …
    65→### Bug Fixes …
    71→### Features …
    86→### ⚠️ BREAKING CHANGES …
    97→### Bug Fixes …
   104→### ⚠ BREAKING CHANGES …
CONTRIBUTING.md
     3→# Contributing
     5→## Code of Conduct
     7→All interactions in the **npm** organization on GitHub are considered to be covered by our standard [Code of Conduct](https://docs.npmjs.com/policies/conduct).
     8→
     9→## Reporting Bugs
    11→Before submitting a new bug report please search for an existing or similar report.
    12→
    13→Use one of our existing issue templates if you believe you've come across a unique problem.
    14→
    15→Duplicate issues, or issues that don't use one of our templates may get closed without a response.
    16→
    17→## Pull Request Conventions
    19→### Commits
    21→We use [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/).
    22→
    23→When opening a pull request please be sure that either the pull request title, or each commit in the pull request, has one of the following prefixes:
    24→
    25→ - `feat`: For when introducing a new feature.  The result will be a new semver minor version of the package when it is next published.
    26→ - `fix`: For bug fixes. The result will be a new semver patch version of the package when it is next published.
    27→ - `docs`: For documentation updates.  The result will be a new semver patch version of the package when it is next published.
    28→ - `chore`: For changes that do not affect the published module.  Often these are changes to tests.  The result will be *no* change to the version of the package when it is next published (as the commit does not affect the published version).
    29→
    30→### Test Coverage
    32→Pull requests made against this repo will run `npm test` automatically.  Please make sure tests pass locally before submitting a PR.
    33→
    34→Every new feature or bug fix should come with a corresponding test or tests that validate the solutions. Testing also reports on code coverage and will fail if code coverage drops.
    35→
    36→### Linting
    38→Linting is also done automatically once tests pass.  `npm run lintfix` will fix most linting errors automatically.
    39→
    40→Please make sure linting passes before submitting a PR.
    41→
    42→## What _not_ to contribute?
    44→### Dependencies
    46→It should be noted that our team does not accept third-party dependency updates/PRs.  If you submit a PR trying to update our dependencies we will close it with or without a reference to these contribution guidelines.
    47→
    48→### Tools/Automation
    50→Our core team is responsible for the maintenance of the tooling/automation in this project and we ask contributors to not make changes to these when contributing (e.g. `.github/*`, `.eslintrc.json`, `.licensee.json`).  Most of those files also have a header at the top to remind folks they are automatically generated.  Pull requests that alter these will not be accepted.
README.md
     4→## Note
     6→-   Sections are treated as nested objects.
     7→
     8→-   Section-less items are treated as globals.
     9→
    10→## Usage
    12→Consider an INI file such as the following:
    13→
    14→```ini
    15→; This comment is being ignored
    16→scope = global
    17→
    18→[database]
    19→user = dbuser
    20→password = dbpassword
    21→database = use_this_database
    22→
    23→[paths.default]
    24→datadir = /var/lib/data
    25→array[] = first value
    26→array[] = second value
    27→array[] = third value
    28→```
    29→
    30→You can **read**, **modify** and **write** it like so:
    31→
    32→```js
    33→import { writeFile , readFile } from 'node:fs/promises'
    34→import { stringify , parse } from 'ini'
    35→
    36→//  Read INI file as text
    37→
    38→let text = await readFile(`./Original.ini`,{
    39→    encoding : 'utf-8'
    40→})
    41→
    42→//  Parse text data to object
    43→
    44→const config = parse(text)
    45→
    46→//  Modify data object
    47→
    48→config.scope = 'local'
    49→config.database.database = 'use_another_database'
    50→config.paths.default.tmpdir = '/tmp'
    51→delete config.paths.default.datadir
    52→config.paths.default.array.push('fourth value')
    53→
    54→//  Stringify data object
    55→
    56→text = stringify(config,{ 
    57→    section : 'section' 
    58→})
    59→
    60→//  Write INI file as text
    61→
    62→await writeFile(`./Modified.ini`,text)
    63→```
    64→
      →…
    82→## API
    84→### Parse
    86→Attempts to turn the given INI string into a nested data object.
    87→
    88→```js
    89→// You can also use `decode`
    90→const object = parse(`<INI Text>`) 
    91→```
    92→
    93→### Stringify
    95→Encodes the given data object as an INI formatted string.
    96→
    97→```js
    98→// You can also use `encode`
    99→stringify(object,{
   100→
   101→    /**
   102→     *  Whether to insert spaces before & after `=`
   103→     * 
   104→     *  Disabled by default to have better 
   105→     *  compatibility with old picky parsers.
   106→     */
   107→
   108→    whitespace : false ,
   109→
   110→    /**
   111→     *  Whether to align the `=` character for each section.
   112→     *  -> Also enables the `whitespace` option
   113→     */
   114→
   115→    align : false ,
   116→
   117→    /**
   118→     *  Identifier to use for global items 
   119→     *  and to prepend to all other sections.
   120→     */
   121→
   122→    section ,
   123→
   124→    /**
   125→     *  Whether to sort all sections & their keys alphabetically.
   126→     */
   127→
   128→    sort : false ,
   129→
   130→    /**
   131→     *  Whether to insert a newline after each section header.
   132→     * 
   133→     *  The TOSHIBA & FlashAir parser require this format. 
   134→     */
   135→
   136→    newline : false ,
   137→
   138→    /**
   139→     *  Which platforms line-endings should be used.
   140→     * 
   141→     *  win32 -> CR+LF
   142→     *  other -> LF
   143→     * 
   144→     *  Default is the current platform
   145→     */
   146→
   147→    platform ,
      →…
   167→### Un / Escape
   169→Turn the given string into a safe to  
   170→use key or value in your INI file.
   171→
   172→```js
   173→safe(`"unsafe string"`) // -> \"unsafe string\"
   174→```
   175→
   176→Or reverse the process with:
   177→
   178→```js
   179→unsafe(`\\"safe string\\"`) // -> "safe string"
   180→```
lib/ini.js
     3→const encode = (obj, opt = {}) => {
    80→function splitSections (str, separator) {
   106→const decode = (str, opt = {}) => {
   212→const isQuoted = val => {
   217→const safe = val => {
   230→const unsafe = val => {
