tests/snapshots/snapshots__budget_ini_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4148 tokens)

.eslintrc.js
     7→const localConfigs = readdir(__dirname)
     8→  .filter((file) => file.startsWith('.eslintrc.local.'))
      →…

.github/ISSUE_TEMPLATE/bug.yml
     3→name …
     4→description …
     5→title …
     6→labels …
     8→body …

.github/ISSUE_TEMPLATE/config.yml
     3→blank_issues_enabled …

.github/actions/create-check/action.yml
     3→name: 'Create Check'
     4→inputs:
    12→    default: ''
    13→outputs:
    15→    value: ${{ steps.create-check.outputs.check_id }}
    16→runs:

.github/actions/install-latest-npm/action.yml
     3→name: 'Install Latest npm'
     4→description: 'Install the latest version of npm compatible with the Node version'
     5→inputs:
     8→    required: true
     9→runs:

.github/dependabot.yml
     3→version: 2
     5→updates:

.github/matchers/tap.json
     2→  "//@npmcli/template-oss": "This file is automatically added by @npmcli/template-oss. Do not edit.",
     3→  "problemMatcher": [
    31→  ]
    32→}

.github/settings.yml
     3→repository:
    11→  enable_vulnerability_alerts: true
    12→
    13→branches:

.github/workflows/audit.yml
     3→name: Audit
     5→on:
     9→    - cron: "0 8 * * 1"
    10→
    11→permissions:
    12→  contents: read
    13→
    14→jobs:

.github/workflows/ci-release.yml
     3→name: CI - Release
     5→on:
    19→        type: string
    20→
    21→permissions:
    23→  checks: write
    24→
    25→jobs:

.github/workflows/ci.yml
     3→name: CI
     5→on:
    13→    - cron: "0 9 * * 1"
    14→
    15→permissions:
    16→  contents: read
    17→
    18→jobs:

.github/workflows/codeql-analysis.yml
     3→name: CodeQL
     5→on:
    14→    - cron: "0 10 * * 1"
    15→
    16→permissions:
    17→  contents: read
    18→
    19→jobs:

.github/workflows/post-dependabot.yml
     3→name: Post Dependabot
     5→on: pull_request
     7→permissions:
     8→  contents: write
     9→
    10→jobs:

.github/workflows/pull-request.yml
     3→name: Pull Request
     5→on:
    11→      - synchronize
    12→
    13→permissions:
    14→  contents: read
    15→
    16→jobs:

.github/workflows/release-integration.yml
     3→name: Release Integration
     5→on:
    20→        required: true
    21→
    22→permissions:
    24→  id-token: write
    25→
    26→jobs:

.github/workflows/release.yml
     3→name: Release
     5→on:
     8→      - main
     9→
    10→permissions:
    13→  checks: write
    14→
    15→jobs:

.release-please-manifest.json
     2→  ".": "6.0.0"
     3→}

CHANGELOG.md
     1→# Changelog …
     3→## [6.0.0](https://github.com/npm/ini/compare/v5.0.0...v6.0.0) (2025-10-22) …
     4→### ⚠️ BREAKING CHANGES …
     6→### Bug Fixes …
     8→### Chores …
    11→## [5.0.0](https://github.com/npm/ini/compare/v4.1.3...v5.0.0) (2024-09-03) …
    12→### ⚠️ BREAKING CHANGES …
    14→### Bug Fixes …
    16→### Chores …
    22→## [4.1.3](https://github.com/npm/ini/compare/v4.1.2...v4.1.3) (2024-05-22) …
    24→### Bug Fixes …
    28→### Chores …
    34→## [4.1.2](https://github.com/npm/ini/compare/v4.1.1...v4.1.2) (2024-03-04) …
    36→### Bug Fixes …
    40→### Documentation …
    46→### Chores …
    63→## [4.1.1](https://github.com/npm/ini/compare/v4.1.0...v4.1.1) (2023-05-16) …
    65→### Bug Fixes …
    69→## [4.1.0](https://github.com/npm/ini/compare/v4.0.0...v4.1.0) (2023-04-13) …
    71→### Features …
    78→### Bug Fixes …
    84→## [4.0.0](https://github.com/npm/ini/compare/v3.0.1...v4.0.0) (2023-03-08) …
    86→### ⚠️ BREAKING CHANGES …
    90→### Features …
    94→## [3.0.1](https://github.com/npm/ini/compare/v3.0.0...v3.0.1) (2022-08-22) …
    97→### Bug Fixes …
   101→## [3.0.0](https://github.com/npm/ini/compare/v2.0.1...v3.0.0) (2022-04-05) …
   104→### ⚠ BREAKING CHANGES …
   108→### Bug Fixes …
   113→### Dependencies …

CONTRIBUTING.md
     3→# Contributing …
     5→## Code of Conduct
     7→All interactions in the **npm** organization on GitHub are considered to be covered by our standard [Code of Conduct](https://docs.npmjs.com/policies/conduct).
     8→
     9→## Reporting Bugs
    11→Before submitting a new bug report please search for an existing or similar report.
    12→
    13→Use one of our existing issue templates if you believe you've come across a unique problem.
    14→
    15→Duplicate issues, or issues that don't use one of our templates may get closed without a response.
    16→
    17→## Pull Request Conventions
    19→### Commits …
    30→### Test Coverage …
    36→### Linting …
    42→## What _not_ to contribute?
    44→### Dependencies …
    48→### Tools/Automation …

README.md
     4→## Note
     6→-   Sections are treated as nested objects.
     7→
     8→-   Section-less items are treated as globals.
     9→
    10→## Usage
    12→Consider an INI file such as the following:
    13→
    14→```ini
    15→; This comment is being ignored
    16→scope = global
    17→
    18→[database]
    19→user = dbuser
    20→password = dbpassword
    21→database = use_this_database
    22→
    23→[paths.default]
    24→datadir = /var/lib/data
    25→array[] = first value
    26→array[] = second value
    27→array[] = third value
    28→```
    29→
    30→You can **read**, **modify** and **write** it like so:
    31→
    32→```js
    33→import { writeFile , readFile } from 'node:fs/promises'
    34→import { stringify , parse } from 'ini'
    35→
    36→//  Read INI file as text
    37→
    38→let text = await readFile(`./Original.ini`,{
    39→    encoding : 'utf-8'
    40→})
    41→
    42→//  Parse text data to object
    43→
    44→const config = parse(text)
    45→
    46→//  Modify data object
    47→
    48→config.scope = 'local'
    49→config.database.database = 'use_another_database'
    50→config.paths.default.tmpdir = '/tmp'
    51→delete config.paths.default.datadir
    52→config.paths.default.array.push('fourth value')
    53→
    54→//  Stringify data object
    55→
    56→text = stringify(config,{ 
    57→    section : 'section' 
    58→})
    59→
    60→//  Write INI file as text
    61→
    62→await writeFile(`./Modified.ini`,text)
    63→```
    64→
    65→The written file will contain the following:
    66→
    67→```ini
    68→[section]
    69→scope=local
    70→[section.database]
    71→user=dbuser
    72→password=dbpassword
    73→database=use_another_database
    74→[section.paths.default]
    75→tmpdir=/tmp
    76→array[]=first value
    77→array[]=second value
    78→array[]=third value
    79→array[]=fourth value
    80→```
    81→
    82→## API
    84→### Parse
    86→Attempts to turn the given INI string into a nested data object.
    87→
    88→```js
    89→// You can also use `decode`
    90→const object = parse(`<INI Text>`) 
    91→```
    92→
    93→### Stringify
    95→Encodes the given data object as an INI formatted string.
    96→
    97→```js
    98→// You can also use `encode`
    99→stringify(object,{
   100→
   101→    /**
   102→     *  Whether to insert spaces before & after `=`
   103→     * 
   104→     *  Disabled by default to have better 
   105→     *  compatibility with old picky parsers.
   106→     */
   107→
   108→    whitespace : false ,
   109→
   110→    /**
   111→     *  Whether to align the `=` character for each section.
   112→     *  -> Also enables the `whitespace` option
   113→     */
   114→
   115→    align : false ,
   116→
   117→    /**
   118→     *  Identifier to use for global items 
   119→     *  and to prepend to all other sections.
   120→     */
   121→
   122→    section ,
   123→
   124→    /**
   125→     *  Whether to sort all sections & their keys alphabetically.
   126→     */
   127→
   128→    sort : false ,
   129→
   130→    /**
   131→     *  Whether to insert a newline after each section header.
   132→     * 
   133→     *  The TOSHIBA & FlashAir parser require this format. 
   134→     */
   135→
   136→    newline : false ,
   137→
   138→    /**
   139→     *  Which platforms line-endings should be used.
   140→     * 
   141→     *  win32 -> CR+LF
   142→     *  other -> LF
   143→     * 
   144→     *  Default is the current platform
   145→     */
   146→
   147→    platform ,
   148→
   149→    /**
   150→     *  Whether to append `[]` to array keys.
   151→     * 
   152→     *  Some parsers treat duplicate names by themselves as arrays
   153→     */
   154→
   155→    bracketedArray : true
   156→
   157→})
   158→```
   159→
   160→*For backwards compatibility any string passed as the*  
   161→*options parameter is treated as the `section` option.*
   162→
   163→```js
   164→stringify(object,'section')
   165→```
   166→
   167→### Un / Escape
   169→Turn the given string into a safe to  
   170→use key or value in your INI file.
   171→
   172→```js
   173→safe(`"unsafe string"`) // -> \"unsafe string\"
   174→```
   175→
   176→Or reverse the process with:
   177→
   178→```js
   179→unsafe(`\\"safe string\\"`) // -> "safe string"
   180→```

lib/ini.js
     3→const encode = (obj, opt = {}) => {
     4→  if (typeof opt === 'string') {
     5→    opt = { section: opt }
     6→  }
     7→  opt.align = opt.align === true
     8→  opt.newline = opt.newline === true
     9→  opt.sort = opt.sort === true
      →…
    80→function splitSections (str, separator) {
    81→  var lastMatchIndex = 0
    82→  var lastSeparatorIndex = 0
    83→  var nextIndex = 0
    84→  var sections = []
    85→
    86→  do {
      →…
   106→const decode = (str, opt = {}) => {
   107→  opt.bracketedArray = opt.bracketedArray !== false
   108→  const out = Object.create(null)
   109→  let p = out
   110→  let section = null
   111→  //          section          |key      = value
   112→  const re = /^\[([^\]]*)\]\s*$|^([^=]+)(=(.*))?$/i
      →…
   212→const isQuoted = val => {
   213→  return (val.startsWith('"') && val.endsWith('"')) ||
   214→    (val.startsWith("'") && val.endsWith("'"))
   215→}
   217→const safe = val => {
   218→  if (
   219→    typeof val !== 'string' ||
   220→    val.match(/[=\r\n]/) ||
   221→    val.match(/^\[/) ||
   222→    (val.length > 1 && isQuoted(val)) ||
   223→    val !== val.trim()
      →…
   230→const unsafe = val => {
   231→  val = (val || '').trim()
   232→  if (isQuoted(val)) {
   233→    // remove the single quotes before calling JSON.parse
   234→    if (val.charAt(0) === "'") {
   235→      val = val.slice(1, -1)
   236→    }
      →…

package.json
     2→  "author": "GitHub Inc.",
     3→  "name": "ini",
     4→  "description": "An ini encoder/decoder for node",
     5→  "version": "6.0.0",
     6→  "repository": {
     9→  },
    10→  "main": "lib/ini.js",
    11→  "scripts": {
    20→  },
    21→  "devDependencies": {
    25→  },
    26→  "license": "ISC",
    27→  "files": [
    30→  ],
    31→  "engines": {
    33→  },
    34→  "templateOSS": {
    38→  },
    39→  "tap": {
    44→  }
    45→}

release-please-config.json
     2→  "group-pull-request-title-pattern": "chore: release ${version}",
     3→  "pull-request-title-pattern": "chore: release${component} ${version}",
     4→  "changelog-sections": [
    30→  ],
    31→  "packages": {
    35→  },
    36→  "prerelease-type": "pre.0"
    37→}

test/duplicate-properties.js
     3→const test = tap.test
     7→const fixture = path.resolve(__dirname, './fixtures/duplicate.ini')
     8→const data = fs.readFileSync(fixture, 'utf8')

test/foo.js
     3→const test = tap.test
     6→const fixture = path.resolve(__dirname, './fixtures/foo.ini')
     7→const data = fs.readFileSync(fixture, 'utf8')

test/win32.js
     5→const res = ini.encode({ foo: { bar: 'baz' } })
